@@ -13,6 +13,11 @@ print(paste0("tol: ", tolerance), quote=FALSE)
 verbose = 0
 
 
+## test mclapply support for fastgrid, cannot do it on windows
+#dat = sim.threephase(n = 20, seed=10)
+#fit.0=chngptm(y~z, ~x, type="M111", data=dat, family="gaussian", est.method="fastgrid", var.type="bootstrap", ci.bootstrap.size=3, verbose=1, ncpus=3); fit.0
+
+
 # autoregressive errors
 dat=sim.chngpt(mean.model="thresholded", threshold.type="M20", n=100, seed=1, mu.x=5, beta=c(10,1),x.distr="lin", e.=5, family="gaussian", alpha=0, sd=3, coef.z=log(1.4), heteroscedastic=FALSE, ar=.5)
 fit=  chngptm(y~z, ~x, type="M20", data=dat, family="gaussian", est.method="fastgrid", var.type="bootstrap", ci.bootstrap.size=1, verbose=verbose, bootstrap.type="sieve")
@@ -25,8 +30,6 @@ fit=  chngptm(y~z, ~x, type="M20", data=dat, family="gaussian", est.method="fast
 checkEqualsNumeric(fit$vcov$boot.samples[1,], c(1.3466068,1.5963537,7.9991371,0.5712195,5.6141414), tolerance=tolerance)    
 
 
-# the following mismatches and need to be figured out
-# even 2020 8 29 code don't work for some reason
 # M111
 est.methods=c("fastgrid","grid")
 dat = sim.threephase(n = 20, seed=10)
@@ -129,7 +132,8 @@ for (type in c("hinge","M02")) {
 print("########  step model m out of n bootstrap")
 dat=sim.chngpt("thresholded", threshold.type="step", family="gaussian", n=20, seed=1, beta=-log(.67), alpha=1)
 est.method="fastgrid2"
-fit.0=chngptm(formula.1=y~z, formula.2=~x, family="gaussian", dat, type="step", est.method=est.method, var.type="bootstrap", m.out.of.n=10, ci.bootstrap.size=10, verbose=verbose)
+fit.0=chngptm(formula.1=y~z, formula.2=~x, family="gaussian", dat, type="step", est.method=est.method, var.type="bootstrap", m.out.of.n=10, ci.bootstrap.size=10, 
+    lb.quantile=.1, ub.quantile=.9, verbose=verbose)
 if (verbose) plot(fit.0); fit.0
 out=c(
   fit.0$logliks[1],
@@ -143,7 +147,8 @@ checkEqualsNumeric(out, c(35.52723714,-0.15529784,-0.18206414,0.02324697,0.99337
 print("########  step model subsampling bootstrap")
 dat=sim.chngpt("thresholded", threshold.type="step", family="gaussian", n=20, seed=1, beta=-log(.67), alpha=1)
 est.method="fastgrid2"
-fit.0=chngptm(formula.1=y~z, formula.2=~x, family="gaussian", dat, type="step", est.method=est.method, var.type="bootstrap", subsampling=10, ci.bootstrap.size=10, verbose=verbose)
+fit.0=chngptm(formula.1=y~z, formula.2=~x, family="gaussian", dat, type="step", est.method=est.method, var.type="bootstrap", subsampling=10, ci.bootstrap.size=10, verbose=verbose, 
+    lb.quantile=.1, ub.quantile=.9)
 if (verbose) plot(fit.0); fit.0
 out=c(
   fit.0$logliks[1],
@@ -243,7 +248,8 @@ for (type in c("M21","M12")) {
     est.methods=c("fastgrid2","grid")
     out=NULL
     for (est.method in est.methods) {
-        fit.0=chngptm(formula.1=pressure~-1, formula.2=~temperature, pressure, type=type, family="gaussian", est.method=est.method, var.type="bootstrap", ci.bootstrap.size=1, verbose=verbose, weights=c(rep(1,9),rep(5,10)))
+        fit.0=chngptm(formula.1=pressure~-1, formula.2=~temperature, pressure, type=type, family="gaussian", est.method=est.method, var.type="bootstrap", ci.bootstrap.size=1, 
+            lb.quantile=.1, ub.quantile=.9, verbose=verbose, weights=c(rep(1,9),rep(5,10)))
         if(verbose) plot(fit.0); fit.0
         out=cbind(out, c(
           fit.0$logliks[1],
@@ -375,7 +381,8 @@ print("########  thinned thresholds, only for grid")
 est.method="grid"
 type="segmented"    
 dat=sim.chngpt("quadratic", n=60, seed=1, beta=log(0.4), x.distr="norm", e.=4.1, b.transition=Inf, family="gaussian")    
-fit = chngptm (formula.1=y~z, formula.2=~x, family="gaussian", dat,  type=type, est.method=est.method, var.type="bootstrap", save.boot=T, ci.bootstrap.size=1, grid.search.max=10, verbose=verbose)
+fit = chngptm (formula.1=y~z, formula.2=~x, family="gaussian", dat,  type=type, est.method=est.method, var.type="bootstrap", save.boot=T, ci.bootstrap.size=1, grid.search.max=10, verbose=verbose, 
+    lb.quantile=.1, ub.quantile=.9)
 out=c(
       fit$logliks[1],
       diff(fit$logliks[1:3]),
@@ -395,7 +402,8 @@ for (type in c("hinge","upperhinge")) {
     est.methods=c("fastgrid2","grid")    
     out=NULL
     for (est.method in est.methods) {
-        fit.0=chngptm (formula.1=y~z, formula.2=~x, family="gaussian", dat, type=type, formula.strat=~I(z>0), est.method=est.method, var.type="bootstrap", save.boot=T, ci.bootstrap.size=1, verbose=verbose)
+        fit.0=chngptm (formula.1=y~z, formula.2=~x, family="gaussian", dat, type=type, formula.strat=~I(z>0), est.method=est.method, var.type="bootstrap", save.boot=T, ci.bootstrap.size=1, verbose=verbose, 
+    lb.quantile=.1, ub.quantile=.9)
         out=cbind(out, c(
           fit.0$logliks[1],
           diff(fit.0$logliks),
